--- a/client/chat-app/src/scss/components/_side-nav.scss
+++ b/client/chat-app/src/scss/components/_side-nav.scss
@@ -4,6 +4,7 @@
   height: 100%;
   max-width: 133px;
   border-radius: 25px;
+  margin-right: 10px;
   display: flex;
   flex-direction: column;
 
@@ -14,8 +15,17 @@
     margin-bottom: 24px;
     cursor: pointer;
 
+    svg {
+      padding: 10px 0;
+
+      &:hover {
+        background-color: $royal-blue-hover;
+      }
+    }
+
     a {
-      display: inline-block;
+      display: flex;
+      align-items: center;
       width: 100%;
       height: 100%;
       padding: 10px 0;
@@ -52,7 +62,11 @@
     }
 
     &:last-child {
-      margin: auto 0 24px;
+      margin: auto 0 20px;
+
+      svg {
+        border-radius: 0 0 25px 25px;
+      }
     }
   }
 }
