Added chat component

--- a/client/chat-app/src/scss/abstract/_colors.scss
+++ b/client/chat-app/src/scss/abstract/_colors.scss
@@ -3,3 +3,5 @@ $royal-blue-active: #612dd1;
 $royal-blue-hover: #431f92;
 $amber-sunset: #f3b559;
 $white: #fff;
+$light-pastel-blue: #eff6fc;
+$soft-grayish-taupe: #b4abab;
