Added register logic

--- a/client/chat-app/src/scss/styles.scss
+++ b/client/chat-app/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "./components/avatar";
 @import "./components/chat-top-bar";
 @import "./components/messages-list";
+@import "./components/modal";
 
 body {
   background-color: $light-pastel-blue;
